<resources>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_attribution">Ad</string>
    <string name="add_app_installing_tips">Installing %1$s…</string>
    <string name="ads_recommend_btn_show">Show</string>
    <string name="ads_recommend_dialog_content">More great apps, show them?</string>
    <string name="ads_remove_ads_btn_text">Remove Ads</string>
    <string name="ads_remove_ads_dialog_content">Download one of our recommeded app can remove all ads permanently. Thanks for your support.</string>
    <string name="apk_extractor">APK Extractor</string>
    <string name="apk_file__empty_view_hint">No apk file found</string>
    <string name="apk_file_btn_batch_raname">Batch rename</string>
    <string name="apk_file_btn_batch_raname_result">%s files has been renamed.</string>
    <string name="apk_file_btn_delete">Delete</string>
    <string name="apk_file_btn_delete_all_duplicate">Delete duplicate APK</string>
    <string name="apk_file_btn_delete_all_duplicate_none">No duplicate APK.</string>
    <string name="apk_file_btn_install">Install</string>
    <string name="apk_file_btn_move_to_directory">Move to directory</string>
    <string name="apk_file_delete_confirm_message">Delete %s selected apk ?</string>
    <string name="apk_file_delete_entry">Backup：%s</string>
    <string name="apk_file_delete_no_target">Please select one</string>
    <string name="apk_file_delete_task_done">Deleted</string>
    <string name="apk_file_install_entry">Installing：%s</string>
    <string name="apk_file_install_no_target">Please select one</string>
    <string name="apk_file_install_result_failed_count">%d install failed！</string>
    <string name="apk_file_install_result_none_success">Auto install failed, install it manually ?</string>
    <string name="apk_file_install_result_success_count">%d install success.</string>
    <string name="apk_file_install_user_canceled">Canceled</string>
    <string name="apk_file_intall_state_installed">[Installed]</string>
    <string name="apk_file_intall_state_new_version">[Newer]</string>
    <string name="apk_file_intall_state_old_version">[Older]</string>
    <string name="apk_file_move_to_directory_confirm_message">Move %1$s APK to directory:\n%2$s ?</string>
    <string name="apk_file_move_to_directory_delete_duplicate">Delete duplicate apk.</string>
    <string name="apk_file_move_to_directory_result_deleted">%s duplicate APK has been deleted.</string>
    <string name="apk_file_move_to_directory_result_moved">%s APK has been moved to directory:</string>
    <string name="apk_file_title">Apk manager</string>
    <string name="apk_name_config_app_name">AppName</string>
    <string name="apk_name_config_format">Format: %s</string>
    <string name="apk_name_config_package_name">PackageName</string>
    <string name="apk_name_config_title">Config filename</string>
    <string name="apk_name_config_version_code">VersionCode</string>
    <string name="apk_name_config_version_name">VersionName</string>
    <string name="app_exit_dialog_button_exit">Quit</string>
    <string name="app_exit_dialog_button_share">Share</string>
    <string name="app_exit_dialog_button_support">Review</string>
    <string name="app_exit_dialog_no_remind_text">Don\'t show next time</string>
    <string name="app_exit_dialog_title">Support us</string>
    <string name="app_exit_dialog_type_share">Share to your friends if you like it.</string>
    <string name="app_exit_dialog_type_support">Give us a five star review if you like it.</string>
    <string name="app_info_dialog_action_install_manually">Install manually</string>
    <string name="app_info_dialog_action_open">Open</string>
    <string name="app_info_dialog_action_search_in_market">Search in market</string>
    <string name="app_info_dialog_action_search_in_website">Search in website</string>
    <string name="app_info_dialog_action_show_detail">Show Details</string>
    <string name="app_info_dialog_action_title">Actions</string>
    <string name="app_info_dialog_detail_package">Package:</string>
    <string name="app_info_dialog_detail_size">Size:</string>
    <string name="app_info_dialog_detail_source_dir">Apk path:</string>
    <string name="app_info_dialog_detail_time">Install time:</string>
    <string name="app_info_dialog_title">App Info</string>
    <string name="app_name">System App Safe Remover</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="b7w">By starting, you agree to the %1$s and %2$s</string>
    <string name="b7x">Please agree to the Privacy Policy and Terms of Service first</string>
    <string name="b7y">Privacy Policy</string>
    <string name="b7z">START</string>
    <string name="b80">Terms of Service</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_at_least_one">At least one selected.</string>
    <string name="common_auto_backup">Auto backup</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_copy">Copy</string>
    <string name="common_copyed_to_clipboard">Copy to your clipboard success.</string>
    <string name="common_create">Create</string>
    <string name="common_downlaod">Download</string>
    <string name="common_failed">Failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_hint">Hint</string>
    <string name="common_hint_long_press">Long press list can see details</string>
    <string name="common_i_know">I know</string>
    <string name="common_install">Install</string>
    <string name="common_menu">Menu</string>
    <string name="common_no">No</string>
    <string name="common_no_permisson">[Files and Media] permission has been denied, please go to permission management and give it permissions.</string>
    <string name="common_no_sdcard">No sdcard found.</string>
    <string name="common_note">(%s)</string>
    <string name="common_on_remind">Do not remind</string>
    <string name="common_open">Open</string>
    <string name="common_select">Select</string>
    <string name="common_select_all">[All]</string>
    <string name="common_select_other">[Other]</string>
    <string name="common_success">Success</string>
    <string name="common_warning">Warning</string>
    <string name="common_yes">Yes</string>
    <string name="dialog_progress_bar_canceling">Canceling…</string>
    <string name="directory_chooser_current_directory">Path:</string>
    <string name="directory_chooser_empty_view_hint">No subdirectory in current directory.</string>
    <string name="directory_chooser_new_folder_failed">Failed to create subdirectory.</string>
    <string name="directory_chooser_new_folder_hint">Name:</string>
    <string name="directory_chooser_new_folder_success">subdirectory created.</string>
    <string name="directory_chooser_new_folder_title">Create subdirectory</string>
    <string name="directory_chooser_select_current_directory">Select current directory</string>
    <string name="directory_chooser_select_sdcard">Select External Storage</string>
    <string name="directory_chooser_title">Directory Chooser</string>
    <string name="directory_chooser_toast_root_directory">Already in root directory of your sdcard.</string>
    <string name="done">Done</string>
    <string name="download_service_state_canceling">canceling</string>
    <string name="download_service_state_connecting">connecting</string>
    <string name="download_service_state_downloaded">%s downloaded.</string>
    <string name="download_service_state_downloading">start downloading %s</string>
    <string name="download_service_state_failed">failed</string>
    <string name="feedback_title">Feedback</string>
    <string name="filter_text_hint">Input name for search</string>
    <string name="menu_category_manager">Manager</string>
    <string name="menu_category_options">Options</string>
    <string name="menu_category_support">Support</string>
    <string name="menu_item_get_pro_edition">Get pro edition</string>
    <string name="menu_item_quit">Quit app</string>
    <string name="menu_item_review">Give app 5 star</string>
    <string name="menu_item_share">Share to friends</string>
    <string name="move_app_title_to_phone">Move to phone</string>
    <string name="move_app_title_to_sdcard">Move to sdcard</string>
    <string name="recommend_app_title">Top apps</string>
    <string name="recommend_game_title">Top games</string>
    <string name="recycle_bin_title">Recycle bin</string>
    <string name="root_help_title">Root help</string>
    <string name="settings_title">Settings</string>
    <string name="system_app_btn_uninstall_noselect">Uninstall</string>
    <string name="system_app_empty_view">Found no application.</string>
    <string name="system_app_summary_selected">Selected: %s</string>
    <string name="system_app_summary_total">Total: %s</string>
    <string name="system_app_title">System app</string>
    <string name="thanks_title">Thanks</string>
    <string name="user_app_title">User app</string>
</resources>