<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/fragment_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.jumobile.manager.systemapp.ui.widget.ActionBar xmlns:ab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ab:abTitle="@string/common_menu"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/category_manager_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:background="@color/grey"
                    android:paddingLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_category_manager"
                    android:lineSpacingExtra="2dp"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_system_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/system_app_title"/>
                <include
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_normal_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/user_app_title"/>
                <include
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_move_to_sdcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/move_app_title_to_sdcard"/>
                <include
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_move_to_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/move_app_title_to_phone"/>
                <include
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_apk_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/apk_file_title"/>
                <include
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_recycle_bin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/recycle_bin_title"/>
                <include
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_get_pro_edition"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/menu_item_get_pro_edition"/>
                <include
                    android:id="@+id/menu_item_get_pro_edition_divider"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_recommend_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/recommend_app_title"/>
                <include
                    android:id="@+id/menu_item_recommend_app_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
                <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                    android:id="@+id/menu_item_recommend_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ab:miText="@string/recommend_game_title"/>
                <include
                    android:id="@+id/menu_item_recommend_game_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    layout="@layout/view_list_divider_horizontal"/>
            </LinearLayout>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:background="@color/grey"
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_category_options"
                android:lineSpacingExtra="2dp"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_root_help"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/root_help_title"/>
            <include
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_feedback"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/feedback_title"/>
            <include
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/settings_title"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/b7y"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_terms_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/b80"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:background="@color/grey"
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_category_support"
                android:lineSpacingExtra="2dp"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/menu_item_review"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/menu_item_share"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/thanks_title"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
            <com.jumobile.manager.systemapp.ui.widget.MenuItemView
                android:id="@+id/menu_item_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ab:miText="@string/menu_item_quit"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="1dp"
                layout="@layout/view_list_divider_horizontal"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
