<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:layout_width="300dp"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbarStyle="outsideOverlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/common_select"
                android:singleLine="true"/>
            <ImageView
                android:background="@drawable/list_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/common_hint"/>
            <CheckBox
                android:textSize="@dimen/dialog_hint_text_size"
                android:textColor="@color/dark"
                android:id="@+id/select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_checkbox_drawable"
                android:text="@string/common_select_all"
                android:drawablePadding="0dp"/>
            <CheckBox
                android:textSize="@dimen/dialog_hint_text_size"
                android:textColor="@color/dark"
                android:id="@+id/select_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@drawable/selector_checkbox_drawable"
                android:text="@string/apk_file_intall_state_new_version"
                android:drawablePadding="0dp"/>
            <CheckBox
                android:textSize="@dimen/dialog_hint_text_size"
                android:textColor="@color/dark"
                android:id="@+id/select_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@drawable/selector_checkbox_drawable"
                android:text="@string/apk_file_intall_state_old_version"
                android:drawablePadding="0dp"/>
            <CheckBox
                android:textSize="@dimen/dialog_hint_text_size"
                android:textColor="@color/dark"
                android:id="@+id/select_installed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@drawable/selector_checkbox_drawable"
                android:text="@string/apk_file_intall_state_installed"
                android:drawablePadding="0dp"/>
            <CheckBox
                android:textSize="@dimen/dialog_hint_text_size"
                android:textColor="@color/dark"
                android:id="@+id/select_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@drawable/selector_checkbox_drawable"
                android:text="@string/common_select_other"
                android:drawablePadding="0dp"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_info_dialog_action_title"
                android:singleLine="true"/>
            <ImageView
                android:background="@drawable/list_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/common_hint"/>
            <Button
                android:textSize="@dimen/dialog_button_text_size"
                android:textColor="@color/white"
                android:id="@+id/action_move_to_directory"
                android:background="@drawable/selector_btn_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apk_file_btn_move_to_directory"/>
            <Button
                android:textSize="@dimen/dialog_button_text_size"
                android:textColor="@color/white"
                android:id="@+id/action_batch_rename"
                android:background="@drawable/selector_btn_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apk_file_btn_batch_raname"/>
            <Button
                android:textSize="@dimen/dialog_button_text_size"
                android:textColor="@color/white"
                android:id="@+id/action_delete_all_duplicate"
                android:background="@drawable/selector_btn_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apk_file_btn_delete_all_duplicate"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
