<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/fragment_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.jumobile.manager.systemapp.ui.widget.ActionBar xmlns:ab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ab:abLeftIcon="@drawable/ic_action_back"
        ab:abTitle="@string/system_app_title"/>
    <EditText
        android:textSize="@dimen/action_bar_edit_size"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:id="@+id/filter_edit_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_text_hint"
        android:singleLine="true"
        android:inputType="textNoSuggestions"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/long_press_hint"
        android:background="@color/grey"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/dialog_hint_text_size"
            android:textColor="@color/yellow"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_hint_long_press"
            android:layout_weight="1"
            android:lineSpacingExtra="2dp"/>
        <Button
            android:textSize="@dimen/dialog_hint_text_size"
            android:textColor="@color/white"
            android:id="@+id/long_press_hint_btn_i_know"
            android:background="@drawable/selector_btn_recommend_small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_i_know"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:textSize="@dimen/dialog_content_text_size"
            android:textColor="@color/grey"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/summary_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/system_app_summary_total"
            android:layout_weight="1"
            android:lineSpacingExtra="2dp"/>
        <TextView
            android:textSize="@dimen/dialog_content_text_size"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/summary_selected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/system_app_summary_selected"
            android:layout_weight="1"
            android:lineSpacingExtra="2dp"/>
    </LinearLayout>
    <ImageView
        android:background="@drawable/list_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/common_hint"/>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fastScrollEnabled="true"
        style="@style/listview"/>
    <TextView
        android:textSize="18dp"
        android:textColor="@color/grey"
        android:gravity="center"
        android:id="@+id/list_empty_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/system_app_empty_view"
        android:layout_weight="1"/>
    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:id="@+id/ads_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/btn_container"
        android:background="@color/actionbar_bg"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textSize="@dimen/dialog_button_text_size"
            android:textColor="@color/white"
            android:id="@+id/btn_uninstall"
            android:background="@drawable/selector_btn_warning"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/system_app_btn_uninstall_noselect"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
